# carbonledger

./: .gitignore  ISO_14064_REVIEW.md  ISO_STANDARDS_LANDSCAPE.md  NOTICE  PHASE0_RESEARCH.md  PLAYBOOK.md  README.md  pyproject.toml
.github/workflows/: test.yml
carbonledger/: __init__.py  calc.py  cli.py  extract.py  factors.py  report.py  scope3.py  validate.py
carbonledger/data/: boundary.md  categories.json  factors.json  stations.json
examples/: fixtures_src_fuel_receipt.html  fixtures_src_kepco_bill.html  fixtures_src_ktx_ticket.html
examples/input/: commute.csv  spend.csv
examples/input/scope3/: cat10_processing.csv  cat11_use.csv  cat12_eol.csv  cat13_leased.csv  cat14_franchise.csv  cat15_investments.csv  cat2_capital_goods.csv  cat4_upstream_transport.csv  cat5_waste.csv  cat8_leased_assets.csv  cat9_downstream_transport.csv
examples/sample_output/: report.md  report.xlsx
tests/: test_golden.py
